--- a/web1/index.html
+++ b/web1/index.html
@@ -32,6 +32,9 @@
 			<ul class="main-nav">
 				<li class="nav-control">
 					<a href="#non" class="e-eleganticons-53">&nbsp;</a>
+					<a href="/images/myw3schoolsimage.jpg" download="w3logo">
+						<img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
+					</a>
 					<ul class="inner-nav">
 						<li><a href="#home" class="e-eleganticons-92"><span>Home</span></a></li>
 						<li><a href="#about" class="e-eleganticons-183"><span>About</span></a></li>
