--- a/web1/index.html
+++ b/web1/index.html
@@ -32,9 +32,6 @@
 			<ul class="main-nav">
 				<li class="nav-control">
 					<a href="#non" class="e-eleganticons-53">&nbsp;</a>
-					<a href="/images/myw3schoolsimage.jpg" download="w3logo">
-						<img src="/images/myw3schoolsimage.jpg" alt="W3Schools">
-					</a>
 					<ul class="inner-nav">
 						<li><a href="#home" class="e-eleganticons-92"><span>Home</span></a></li>
 						<li><a href="#about" class="e-eleganticons-183"><span>About</span></a></li>
@@ -53,7 +50,7 @@
 		<h1 class="big-head"><span>Johnny Doe</span></h1>
 		<h4 class="text-sub"><span>Code Monkey &amp; Designer</span></h4>
 	</header>
-	<div class="cv-btn"><a href="#non">Download Resume</a></div>
+	<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
 	<div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more about me</a></div>
 </div>
 
