--- a/web1/index.html
+++ b/web1/index.html
@@ -47,7 +47,7 @@
 
 <div class="home" id="home">
 	<header class="big-title">
-		<h1 class="big-head"><span>Johnny Doe</span></h1>
+		<h1 class="big-head">Johnny Doe</h1>
 		<h3 class="text-sub">Code Monkey &amp; Designer</h3>
 	</header>
 	<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
