--- a/web1/index.html
+++ b/web1/index.html
@@ -46,10 +46,19 @@
 </header>
 
 <div class="home" id="home">
-	<header class="big-title">
-		<h1 class="big-head">Johnny Doe</h1>
-		<h3 class="text-sub">Code Monkey &amp; Designer</h3>
-	</header>
+	<div class="info row">
+		<header class="big-title">
+			<h1 class="big-head">Johnny Doe</h1>
+			<h3 class="text-sub">Code Monkey &amp; Designer</h3>
+		</header>
+		<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic"></figure>
+		<div class="desc col-md-8 col-sm-7">
+			<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti <strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos. </p>
+			<br>
+			<p>Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. condimentum fermentum nunc.</p>
+		</div>
+	</div>
+	
 	<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
 	<div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more about me</a></div>
 </div>
