--- a/web1/index.html
+++ b/web1/index.html
@@ -47,10 +47,8 @@
 
 <div class="home" id="home">
 	<div class="info row">
-		<div class="big-title">
-			<h1 class="big-head">Johnny Doe</h1>
-			<h3 class="text-sub">Code Monkey &amp; Designer</h3>
-		</div>
+		<h1 class="big-head">Steffen Eger</h1>
+		<h3 class="text-sub">Natural Language Learning Group</h3>
 		<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic"></figure>
 		<div class="desc col-md-8 col-sm-7">
 			<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non  mauris vitae erat consequat auctor eu in elit. Class aptent taciti <strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos. </p>
