--- a/web1/index.html
+++ b/web1/index.html
@@ -48,9 +48,12 @@
 <div class="home" id="home">
 	<header class="big-title">
 		<h1 class="big-head">Steffen Eger</h1>
-		<h3 class="text-sub">Natural Language Learning Group</h3>
+		<h2 class="text-sub">Natural Language Learning Group</h3>
 	</header>
 	<div class="info row">
+		<header class="title">
+			<h3><span>About Me</span></h2>
+		</header>
 		<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic"></figure>
 		<div class="desc col-md-8 col-sm-7">
 			<p>I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics. </p>
