--- a/web1/index.html
+++ b/web1/index.html
@@ -48,7 +48,7 @@
 <div class="home" id="home">
 	<header class="big-title">
 		<h1 class="big-head">Steffen Eger</h1>
-		<h2 class="text-sub">Natural Language Learning Group</h3>
+		<h3 class="text-sub"><span>Language Learning Group</span> </h3>
 	</header>
 	<div class="container">
 		<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic"></figure>
