--- a/web1/index.html
+++ b/web1/index.html
@@ -52,18 +52,20 @@
 			<h1 class="big-head">Steffen Eger</h1>
 			<h3 class="text-sub"><span>Language Learning Group</span></h3>
 		</header>
-		<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
-		</figure>
-		<header class="title">
-			<h3><span>About Me</span></h2>
-		</header>
-		<div class="desc col-md-8 col-sm-7">
-			<p>I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language
-				Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a
-				PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the
-				topic of Social Learning/Opinion Dynamics. </p>
-			<br>
-			<p>...</p>
+		<div class="container">
+			<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
+			</figure>
+			<header class="title">
+				<h3><span>About Me</span></h2>
+			</header>
+			<div class="desc col-md-8 col-sm-7">
+				<p>I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language
+					Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a
+					PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the
+					topic of Social Learning/Opinion Dynamics. </p>
+				<br>
+				<p>...</p>
+			</div>
 		</div>
 
 		<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
@@ -108,8 +110,7 @@
 						nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
 						cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
 						ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti
-						<strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos.
-					</p>
+						<strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos. </p>
 					<br>
 					<p>Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. condimentum
 						fermentum nunc.</p>
