--- a/web1/index.html
+++ b/web1/index.html
@@ -56,7 +56,7 @@
 			<figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
 			</figure>
 			<header class="title">
-				<h3><span>About Me</span></h2>
+				<h4>About Me</h2>
 			</header>
 			<div class="desc col-md-8 col-sm-7">
 				<p>I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language
