--- a/web1/index.html
+++ b/web1/index.html
@@ -62,7 +62,7 @@
 				Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a
 				PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the
 				topic of Social Learning/Opinion Dynamics.</p>
-			<p>...</p>
+			<p>xxx</p>
 		</div>
 
 		<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
