--- a/web1/index.html
+++ b/web1/index.html
@@ -64,7 +64,6 @@
 				topic of Social Learning/Opinion Dynamics.</p>
 			<p>xxx</p>
 		</div>
-
 		<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
 		<div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more about me</a></div>
 	</div>
@@ -74,9 +73,8 @@
 		<div class="extra-info">
 			<div class="container">
 				<ul class="row">
-					<li class="birthdate col-md-3 col-sm-3 col-xs-6">
-						<span class="head">Birthdate</span>
-						<span>18-05-1984</span>
+					<li class="Google Scholar">
+						<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
 					</li>
 					<li class="work-type col-md-3 col-sm-3 col-xs-6">
 						<span class="head">Work As</span>
