--- a/web1/index.html
+++ b/web1/index.html
@@ -58,13 +58,13 @@
 			<header class="title">
 				<h4>About Me</h2>
 			</header>
-			<p class="desc">I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language
+			<p class="desc">I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural
+				Language
 				Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a
 				PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the
 				topic of Social Learning/Opinion Dynamics.</p>
-			<p>xxx</p>
 		</div>
-	</div>
+
 		<div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
 		<div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more about me</a></div>
 	</div>
@@ -74,8 +74,7 @@
 		<div class="extra-info">
 			<div class="container">
 				<ul class="row">
-					<li class="Google Scholar col-md-3 col-sm-3 col-xs-6">
-						<div class="cv-btn"><a href="https://www.youtube.com/">Google Scholar </a></div>
+					<li class="birthdate col-md-3 col-sm-3 col-xs-6">
 						<span class="head">Birthdate</span>
 						<span>18-05-1984</span>
 					</li>
@@ -108,7 +107,8 @@
 						nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate
 						cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a
 						ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti
-						<strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos. </p>
+						<strong>highlighted text</strong> per conubia nostra, per inceptos himenaeos.
+					</p>
 					<br>
 					<p>Mauris in erat justo. Nullam ac urna eu felis dapibus condimentum sit amet a augue. condimentum
 						fermentum nunc.</p>
