--- a/web1/index.html
+++ b/web1/index.html
@@ -74,9 +74,8 @@
 		<div class="extra-info">
 			<div class="container">
 				<ul class="row">
-					<li class="birthdate col-md-3 col-sm-3 col-xs-6">
-						<span class="head">Birthdate</span>
-						<span>18-05-1984</span>
+					<li class="Google Scholar  col-md-3 col-sm-3 col-xs-6">
+						<div class="cv-btn"><a href="https://scholar.google.com/citations?user=TnuqAW0AAAAJ&hl=de&oi=ao">Google Scholar </a></div>
 					</li>
 					<li class="work-type col-md-3 col-sm-3 col-xs-6">
 						<span class="head">Work As</span>
