--- a/web1/index.html
+++ b/web1/index.html
@@ -75,19 +75,13 @@
 			<div class="container">
 				<ul class="row">
 					<li class="Google Scholar  col-md-3 col-sm-3 col-xs-6">
-						<div class="cv-btn"><a href="https://scholar.google.com/citations?user=TnuqAW0AAAAJ&hl=de&oi=ao">Google Scholar </a></div>
+						<div class="cv-btn"><a href="https://scholar.google.com/citations?user=TnuqAW0AAAAJ&hl=de&oi=ao">Google Scholar</a></div>
 					</li>
-					<li class="work-type col-md-3 col-sm-3 col-xs-6">
-						<span class="head">Work As</span>
-						<span>Freelancer</span>
+					<li class="Github  col-md-3 col-sm-3 col-xs-6">
+						<div class="cv-btn"><a href="https://github.com/SteffenEger">Github</a></div>
 					</li>
-					<li class="phone-no col-md-3 col-sm-3 col-xs-6">
-						<span class="head">Phone No</span>
-						<span>8790200300</span>
-					</li>
-					<li class="email col-md-3 col-sm-3 col-xs-6">
-						<span class="head">Email Address</span>
-						<span>johnny@doe.com</span>
+					<li class="Twitter  col-md-3 col-sm-3 col-xs-6">
+						<div class="cv-btn"><a href="https://twitter.com/egere14">Twitter</a></div>
 					</li>
 				</ul>
 			</div>
