--- a/web1/index.html
+++ b/web1/index.html
@@ -81,7 +81,7 @@
 						<div class="cv-btn"><a href="https://github.com/SteffenEger">Github</a></div>
 					</li>
 					<li class="Twitter  col-md-3 col-sm-3 col-xs-6">
-						<div class="cv-btn"><a href="https://twitter.com/egere14">Twitter</a></div>
+						<div class="cv-btn"><a href="https://twitter.com/egere14"><span>Twitter</span></a></div>
 					</li>
 				</ul>
 			</div>
