--- a/web1/index.html
+++ b/web1/index.html
@@ -78,7 +78,7 @@
 						<div class="cv-btn"><a href="https://scholar.google.com/citations?user=TnuqAW0AAAAJ&hl=de&oi=ao">Google Scholar</a></div>
 					</li>
 					<li class="Github  col-md-3 col-sm-3 col-xs-6">
-						<div class="cv-btn"><a href="https://github.com/SteffenEger">Github</a></div>
+						<div class="cv-btn"><a href="https://github.com/SteffenEger"><span>Github</span></a></div>
 					</li>
 					<li class="Twitter  col-md-3 col-sm-3 col-xs-6">
 						<div class="cv-btn"><a href="https://twitter.com/egere14"><span>Twitter</span></a></div>
