--- a/web1/index.html
+++ b/web1/index.html
@@ -81,6 +81,9 @@
                     <li class="Twitter  col-md-3 col-sm-3 col-xs-6">
                         <div class="cv-btn"><a href="https://twitter.com/egere14"><span>Twitter</span></a></div>
                     </li>
+                    <li class="Email  col-md-3 col-sm-3 col-xs-6">
+                        <div class="cv-btn"><a href="eger@aiphes.tu-darmstadt.de"><span>Email</span></a></div>
+                    </li>
                 </ul>
             </div>
         </div>
