--- a/web1/index.html
+++ b/web1/index.html
@@ -59,8 +59,8 @@
             <header class="title">
                 <h4>About Me</h2>
             </header>
-            <p class="desc">I am currently Independent Research Group Leader (IRGL) at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016)
-                in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.</p>
+            <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology
+                Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.</p>
         </div>
 
         <div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
