--- a/web1/index.html
+++ b/web1/index.html
@@ -53,19 +53,22 @@
             <h1 class="big-head">Steffen Eger</h1>
             <h3 class="text-sub"><span>Language Learning Group</span></h3>
         </header>
-        <div class="container">
-            <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
-            </figure>
-            <header class="title">
-                <h4>About Me</h2>
-            </header>
-            <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology
-                Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.</p>
-        </div>
 
-        <div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
-        <div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more about me</a></div>
     </div>
+
+    <div class="container">
+        <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
+        </figure>
+        <header class="title">
+            <h4>About Me</h2>
+        </header>
+        <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology
+            Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.
+        </p>
+    </div>
+
+    <div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
+    <div class="learn-more"><a href="#about" class="e-eleganticons-162">learn more</a></div>
 
     <div class="about" id="about">
         <!-- Extra Info -->
