--- a/web1/index.html
+++ b/web1/index.html
@@ -75,7 +75,7 @@
     <div class="about" id="about">
         <!-- Extra Info -->
         <div class="extra-info">
-            <div class="comm app">
+            <div class="container">
                 <ul class="row">
                     <li class="Google Scholar  col-md-3 col-sm-3 col-xs-6">
                         <div class="cv-btn"><a href="https://scholar.google.com/citations?user=TnuqAW0AAAAJ&hl=de&oi=ao">Google Scholar</a></div>
