--- a/web1/index.html
+++ b/web1/index.html
@@ -50,14 +50,16 @@
 
     <div class="home" id="home">
         <header class="big-title">
-            <h1 class="big-head">Steffen Eger</h1>
-            <h3 class="text-sub"><span>Language Learning Group</span></h3>
+            <h1 class="big-head">Natural Language Learning Group</h1>
+            <h3 class="text-sub"><span>Independent Research Group</span></h3>
         </header>
         <div class="container">
             <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
             </figure>
-            <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the Natural Language Learning Group. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology
-                Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.
+            <h3>Group Leader</h3>
+            <h4>Dr. Steffen Eger</h4>
+            <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc
+                at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.
             </p>
 
         </div>
