--- a/web1/index.html
+++ b/web1/index.html
@@ -54,20 +54,41 @@
             <h3 class="text-sub"><span>Independent Research Group</span></h3>
         </header>
         <div class="container">
-            <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
-            </figure>
-            <h3>Group Leader</h3>
-            <h4>Dr. Steffen Eger</h4>
-            <p class="desc">I am currently <strong>Independent Research Group Leader (IRGL)</strong> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc
-                at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of Social Learning/Opinion Dynamics.
-            </p>
+            <div class="info row">
+                <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
+                </figure>
+                <h3>Group Leader</h3>
+                <h4>Dr. Steffen Eger</h4>
+                <div class="desc col-md-8 col-sm-7">
+                    <p>I am currently
+                        <a class="link" href="https://www.informatik.tu-darmstadt.de/aiphes/aiphes/irg_position/index.en.jsp"> <strong>Independent Research Group Leader (IRGL)</strong> </a> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>. Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc
+                        at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of
+                        <a class="link" href="http://adiuvaris.org/main.pdf"> <strong>Social Learning/Opinion Dynamics</strong> </a>.
+                    </p>
+                    <br>
+                    <p>My research interests include Natural Language Processing (NLP), Machine Learning, and applications in the Digital Humanities and Social Sciences. Currently, I am particularly interested in
+                        <ul>
+                            <li>evaluation metrics (for MT/summariztion) and cross-lingual approaches</li>
+                            <li>applications in the Social Sciences and Digital Humanities, e.g., change of social biases over time, detection of social solidarity, poetry (generation/evaluation), metaphor and emotion detection, cross-temporal approaches
+                                (language change), argumentation
+                            </li>
+                        </ul>
+                        Earlier research interests included
+                        <a class="link" href="https://aclanthology.org/D15-1139/"> <strong>alignments</strong> </a>, opinion dynamics (in a social science/economic context) as well as applications in math (such as integer compositions and limits of powers of matrices).
+                    </p>
+                </div>
+            </div>
 
         </div>
 
+        <!-- later edit
         <div>
             <div class="cv-btn"><a href="https://www.youtube.com/">Download Resume</a></div>
             <div class="learn-more"><a href="#about">learn more</a></div>
         </div>
+        -->
+
+
 
 
     </div>
