--- a/web1/index.html
+++ b/web1/index.html
@@ -284,122 +284,10 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Statistics -->
-            <div class="statistics">
-                <div class="container">
-                    <h3 class="title">Statistics</h3>
-                    <div class="row desc">
-                        <div class="col-md-3 col-sm-3 col-xs-6">
-                            <span class="num">3</span>
-                            <span>years of experience</span>
-                        </div>
-                        <div class="col-md-3 col-sm-3 col-xs-6">
-                            <span class="num">300</span>
-                            <span>projects completed</span>
-                        </div>
-                        <div class="col-md-3 col-sm-3 col-xs-6">
-                            <span class="num">2093</span>
-                            <span>hours of work</span>
-                        </div>
-                        <div class="col-md-3 col-sm-3 col-xs-6">
-                            <span class="num">2500</span>
-                            <span>bear cans</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
         </div>
         <!-- End About Section -->
 
-        <div class="resume" id="resume">
 
-            <!-- End Timeline -->
-
-            <!-- Skills -->
-            <div class="skills">
-                <div class="container">
-                    <h3 class="title">Skills</h3>
-                    <div class="row">
-                        <div class="chart col-md-3 col-sm-6 col-xs-6">
-                            <div class="chart-draw" data-percent="75"><em>75%</em></div>
-                            <span class="sub">JavaScript</span>
-                        </div>
-
-                        <div class="chart col-md-3 col-sm-6 col-xs-6">
-                            <div class="chart-draw" data-percent="90"><em>90%</em></div>
-                            <span class="sub">HTML/CSS3</span>
-                        </div>
-                        <div class="chart col-md-3 col-sm-6 col-xs-6">
-                            <div class="chart-draw" data-percent="80"><em>80%</em></div>
-                            <span class="sub">Photoshop</span>
-                        </div>
-                        <div class="chart col-md-3 col-sm-6 col-xs-6">
-                            <div class="chart-draw" data-percent="70"><em>70%</em></div>
-                            <span class="sub">C/C++</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- End Skills -->
-
-        </div>
-        <!-- End Resume Section -->
-
-        <div class="portfolio" id="portfolio">
-            <div class="works container">
-                <header class="title">
-                    <h2>Portfolio</h2>
-                    <h3><span>/</span>Work done so far</h3>
-                </header>
-                <p class="desc">Nam nec tellus a odio tincidunt auctor a ornare odio. Sed non mauris vitae erat consequat auctor eu in elit. Class aptent taciti sociosqu adilip litora torquent per conubia nostra, per inceptos himenaeos. Mauris in erat justo.</p>
-                <ul class="filter-menu">
-                    <li><a href="#non" class="filter-current" data-filter="*">All</a>&nbsp;//&nbsp;</li>
-                    <li><a href="#non" data-filter=".print">Graphic</a>&nbsp;//&nbsp;</li>
-                    <li><a href="#non" data-filter=".design">Web Design</a>&nbsp;//&nbsp;</li>
-                    <li><a href="#non" data-filter=".illustration">Print</a></li>
-                </ul>
-                <ul class="filter-port row">
-                    <li class="item print col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/1.jpg" alt="placeholder-img">
-                            <a href="static/picture/1.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                    <li class="item design col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/2.jpg" alt="placeholder-img">
-                            <a href="static/picture/2.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                    <li class="item illustration col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/3.jpg" alt="placeholder-img">
-                            <a href="static/picture/3.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                    <li class="item print col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/4.jpg" alt="placeholder-img">
-                            <a href="static/picture/4.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                    <li class="item design col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/5.jpg" alt="placeholder-img">
-                            <a href="static/picture/6.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                    <li class="item print col-md-4 col-sm-6">
-                        <figure>
-                            <img src="static/picture/6.jpg" alt="placeholder-img">
-                            <a href="static/picture/6.jpg" rel="external">Project Title<span><em>subtitle</em></span></a>
-                        </figure>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <!-- End Portfolio Section -->
 
 
         <div class="contact" id="contact">
@@ -430,7 +318,7 @@
 
         <footer id="footer" class="page-foot clearfix">
             <div class="container">
-                <p class="copyright">Copyright &copy; 2021.Company name All rights reserved.<a target="_blank" href="https://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
+                <p class="copyright">Copyright &copy; 2021.Company name All rights reserved.</p>
                 <ul class="socials">
                     <li>
                         <a href="#non" class="e-eleganticons-208"></a>
