--- a/web1/index.html
+++ b/web1/index.html
@@ -47,29 +47,32 @@
             <div class="info row">
                 <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
                 </figure>
-                <header class="title">
-                    <h2>Group Leader</h2>
-                    <h4><span>/</span>Steffen Eger</h4>
-                </header>
-                <div class="desc col-md-8 col-sm-7">
-                    <p>I am currently
-                        <a class="link" href="https://www.informatik.tu-darmstadt.de/aiphes/aiphes/irg_position/index.en.jsp">Independent Research Group Leader (IRGL)</a> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>. Before
-                        that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of
-                        <a class="link" href="http://adiuvaris.org/main.pdf">Social Learning/Opinion Dynamics</a>.
-                    </p>
-                    <br>
-                    <p>My research interests include Natural Language Processing (NLP), Machine Learning, and applications in the Digital Humanities and Social Sciences. Currently, I am particularly interested in
-                        <ul>
-                            <li><strong>evaluation metrics (for MT/summariztion) and cross-lingual approaches</strong></li>
-                            <li>applications in the Social Sciences and Digital Humanities, e.g., <strong>change of social biases over time, detection of social solidarity, poetry (generation/evaluation), metaphor and emotion detection, cross-temporal approaches
-                                (language change), argumentation</strong>
-                            </li>
-                        </ul>
-                        Earlier research interests included
-                        <a class="link" href="https://aclanthology.org/D15-1139/">alignments</a>,
-                        <a class="link" href="https://arxiv.org/abs/1306.3134">opinion dynamics</a> (in a social science/economic context) as well as applications in math (such as <a class="link" href="https://www.intlpress.com/site/pub/pages/journals/items/joc/content/vols/0010/0002/a007/index.php?mode=ns">integer compositions</a>                        and <a class="link" href="https://www.sciencedirect.com/science/article/pii/S002437951630252X">limits of powers of matrices</a>).
-                    </p>
+                <div class="desc col-md-7 col-sm-6">
+                    <header class="title">
+                        <h2>Group Leader</h2>
+                        <h4><span>/</span>Steffen Eger</h4>
+                    </header>
+                    <div class="text">
+                        <p>I am currently
+                            <a class="link" href="https://www.informatik.tu-darmstadt.de/aiphes/aiphes/irg_position/index.en.jsp">Independent Research Group Leader (IRGL)</a> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>.
+                            Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of
+                            <a class="link" href="http://adiuvaris.org/main.pdf">Social Learning/Opinion Dynamics</a>.
+                        </p>
+                        <p>My research interests include Natural Language Processing (NLP), Machine Learning, and applications in the Digital Humanities and Social Sciences. Currently, I am particularly interested in
+                            <ul>
+                                <li><strong>evaluation metrics (for MT/summariztion) and cross-lingual approaches</strong></li>
+                                <li>applications in the Social Sciences and Digital Humanities, e.g., <strong>change of social biases over time, detection of social solidarity, poetry (generation/evaluation), metaphor and emotion detection, cross-temporal approaches
+                                    (language change), argumentation</strong>
+                                </li>
+                            </ul>
+                            Earlier research interests included
+                            <a class="link" href="https://aclanthology.org/D15-1139/">alignments</a>,
+                            <a class="link" href="https://arxiv.org/abs/1306.3134">opinion dynamics</a> (in a social science/economic context) as well as applications in math (such as <a class="link" href="https://www.intlpress.com/site/pub/pages/journals/items/joc/content/vols/0010/0002/a007/index.php?mode=ns">integer compositions</a>                            and <a class="link" href="https://www.sciencedirect.com/science/article/pii/S002437951630252X">limits of powers of matrices</a>).
+                        </p>
+                    </div>
                 </div>
+
+
             </div>
 
         </div>
@@ -257,6 +260,24 @@
         </div>
     </div>
     <!-- End About Section -->
+    <div class="theses">
+        <div class="container">
+            <h3 class="title">Theses</h3>
+            <div class="row desc">
+                <div class="theses1 col-md-4">
+                    <span class="num">Supervised PhD theses</span>
+                    <span>Wei Zhao 2018-2021. Towards human-level natural language generation.</span>
+                </div>
+                <div class="theses2 col-md-5">
+                    <span class="num">Supervised Bachelor / Master theses</span>
+                    <span>sentiment conditioned poetry generation</span>
+                    <span>multilingual probing for sentence embeddings</span>
+                    <span>unsupervised neural poetry translation</span>
+                </div>
+
+            </div>
+        </div>
+    </div>s
 
     <div class="about" id="contact">
         <!-- Extra Info -->
