--- a/web1/index.html
+++ b/web1/index.html
@@ -28,13 +28,34 @@
     <header id="header" class="page-head clearfix">
         <div class="container">
             <img class="col-xs-4" src="static/picture/logo.png" alt="site-logo">
-            <ul class="main-nav col-md-7">
+            <!--
+                <ul class="main-nav col-md-7">
                 <li><a href="#team">Team</a></li>
                 <li><a href="#resume">News</a></li>
                 <li><a href="#theses">Theses</a></li>
                 <li><a href="#teaching">Teaching</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            -->
+            <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Link</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
         </div>
     </header>
 
@@ -44,36 +65,34 @@
             <h3 class="text-sub"><span>Independent Research Group</span></h3>
         </header>
         <div class="container">
-            <div class="info row">
-                <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
-                </figure>
-                <div class="desc col-md-7 col-sm-6">
-                    <header class="title">
-                        <h2>Group Leader</h2>
-                        <h4><span>/</span>Steffen Eger</h4>
-                    </header>
-                    <div class="text">
-                        <p>I am currently
-                            <a class="link" href="https://www.informatik.tu-darmstadt.de/aiphes/aiphes/irg_position/index.en.jsp">Independent Research Group Leader (IRGL)</a> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>.
-                            Before that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of
-                            <a class="link" href="http://adiuvaris.org/main.pdf">Social Learning/Opinion Dynamics</a>.
-                        </p>
-                        <p>My research interests include Natural Language Processing (NLP), Machine Learning, and applications in the Digital Humanities and Social Sciences. Currently, I am particularly interested in
-                            <ul>
-                                <li><strong>evaluation metrics (for MT/summariztion) and cross-lingual approaches</strong></li>
-                                <li>applications in the Social Sciences and Digital Humanities, e.g., <strong>change of social biases over time, detection of social solidarity, poetry (generation/evaluation), metaphor and emotion detection, cross-temporal approaches
+
+            <figure class="col-md-4 col-sm-5 author-pic"><img src="static/picture/author-pic.jpg" alt="author-pic">
+            </figure>
+            <div class="desc col-md-7 col-sm-6">
+                <header class="title">
+                    <h2>Group Leader</h2>
+                    <h4><span>/</span>Steffen Eger</h4>
+                </header>
+                <div class="text">
+                    <p>I am currently
+                        <a class="link" href="https://www.informatik.tu-darmstadt.de/aiphes/aiphes/irg_position/index.en.jsp">Independent Research Group Leader (IRGL)</a> at TU Darmstadt, heading the <strong>Natural Language Learning Group</strong>. Before
+                        that, I was a PostDoc at UKP Lab (from 2016-2018) in Darmstadt as well as a PostDoc at Text Technology Lab (from 2014-2016) in Frankfurt. I obtained my PhD in economics on the topic of
+                        <a class="link" href="http://adiuvaris.org/main.pdf">Social Learning/Opinion Dynamics</a>.
+                    </p>
+                    <p>My research interests include Natural Language Processing (NLP), Machine Learning, and applications in the Digital Humanities and Social Sciences. Currently, I am particularly interested in
+                        <ul>
+                            <li><strong>evaluation metrics (for MT/summariztion) and cross-lingual approaches</strong></li>
+                            <li>applications in the Social Sciences and Digital Humanities, e.g., <strong>change of social biases over time, detection of social solidarity, poetry (generation/evaluation), metaphor and emotion detection, cross-temporal approaches
                                     (language change), argumentation</strong>
-                                </li>
-                            </ul>
-                            Earlier research interests included
-                            <a class="link" href="https://aclanthology.org/D15-1139/">alignments</a>,
-                            <a class="link" href="https://arxiv.org/abs/1306.3134">opinion dynamics</a> (in a social science/economic context) as well as applications in math (such as <a class="link" href="https://www.intlpress.com/site/pub/pages/journals/items/joc/content/vols/0010/0002/a007/index.php?mode=ns">integer compositions</a>                            and <a class="link" href="https://www.sciencedirect.com/science/article/pii/S002437951630252X">limits of powers of matrices</a>).
-                        </p>
-                    </div>
+                            </li>
+                        </ul>
+                        Earlier research interests included
+                        <a class="link" href="https://aclanthology.org/D15-1139/">alignments</a>,
+                        <a class="link" href="https://arxiv.org/abs/1306.3134">opinion dynamics</a> (in a social science/economic context) as well as applications in math (such as <a class="link" href="https://www.intlpress.com/site/pub/pages/journals/items/joc/content/vols/0010/0002/a007/index.php?mode=ns">integer compositions</a>                        and <a class="link" href="https://www.sciencedirect.com/science/article/pii/S002437951630252X">limits of powers of matrices</a>).
+                    </p>
                 </div>
-
-
             </div>
+
 
         </div>
 
