--- a/web1/index.html
+++ b/web1/index.html
@@ -274,7 +274,7 @@
                             EMNLP, 2021
                         </span>
                             <span class="link">
-                            <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                            <a href="https://arxiv.org/pdf/2110.04399.pdf">-<em>paper link</em>
                         </span>
                             </a>
                         </div>
@@ -292,7 +292,7 @@
                             Eval4NLP, 2021
                         </span>
                             <span class="link">
-                            <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                            <a href="https://arxiv.org/abs/2110.04392">-<em>paper link</em>
                         </span>
                             </a>
                         </div>
@@ -309,7 +309,7 @@
                             JCDL, 2021
                         </span>
                             <span class="link">
-                            <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                            <a href="https://arxiv.org/abs/2108.06295">-<em>paper link</em>
                             </a>
                         </span>
                         </div>
@@ -326,7 +326,7 @@
                                 ACL, 2021
                             </span>
                             <span class="link">
-                                <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                <a href="https://aclanthology.org/2021.findings-acl.141/">-<em>paper link</em>
                                 </a>
                             </span>
                         </div>
@@ -354,7 +354,7 @@
                                         ACL, 2021
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2021.acl-long.179/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -371,7 +371,7 @@
                                         ACL, 2021
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2021.acl-long.129/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -388,7 +388,7 @@
                                     AACL, 2020
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2020.aacl-main.79/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -405,7 +405,7 @@
                                     CONLL, 2020
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2020.conll-1.8/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -422,7 +422,7 @@
                                     ACL, 2020
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2020.acl-main.151/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -439,7 +439,7 @@
                                     ACL, 2020
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2020.acl-main.124/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -456,7 +456,7 @@
                                     LREC, 2020
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/2020.lrec-1.205/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -473,7 +473,7 @@
                                     EMNLP, 2019
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/D19-1053/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -490,7 +490,7 @@
                                     NAACL, 2019
                                 </span>
                                     <span class="link">
-                                        <a href="https://aclanthology.org/N19-1129/">-<em>paper link</em>
+                                        <a href="https://aclanthology.org/N19-1165/">-<em>paper link</em>
                                         </a>
                                 </span>
                                 </div>
@@ -700,7 +700,7 @@
 
     <footer id="footer" class="page-foot clearfix">
         <div class="container">
-            <p class="copyright">Copyright &copy; 2021.Company name All rights reserved.</p>
+            <p class="copyright">Copyright &copy; 2021.  NLLG</p>
             <!--
                 <ul class="socials">
                     <li>
